# ROSALIND-data-analyst-agent

./: demo_rosalind.py
app/: rosalind_app.py
data/: sample_mpesa_transactions.csv  sample_sales_2024.csv
rosalind/: __init__.py  agent.py  memory.py  prompts.py  pyproject.toml
rosalind/tools/: __init__.py  claening.py  loading.py  powerbi.py  visualization.py
