[tool.poetry]
name = "rosalind-data-analyst-agent"
version = "0.1.0"
description = "Rosalind Data Analyst Agent"
authors = ["Your Name <you@example.com>"]
# We deliberately disable package mode because on Streamlit Cloud
# we only need dependency management, not to install the project itself as a package
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
langchain = "0.2.16"
langchain-community = "0.2.16"
langchain-openai = "0.1.23"
langchain-core = "0.2.38"
langchain-experimental = "0.0.65"
openai = "1.47.1"
anthropic = "^0.18.0"
python-dotenv = "^1.0.1"
chromadb = "0.5.3"
pysqlite3-binary = "*"
hnswlib = "^0.8.0"
tiktoken = "^0.7.0"
pydantic = "2.8.2"
pandas = "^2.2.2"
plotly = "^5.22.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
